--- a/css/bootstrap-theme.css
+++ b/css/bootstrap-theme.css
@@ -185,6 +185,7 @@
 }
 .navbar-brand,
 .navbar-nav > li > a {
+ 
   text-shadow: 0 1px 0 rgba(255, 255, 255, .25);
 }
 .navbar-inverse {
@@ -204,6 +205,7 @@
 }
 .navbar-inverse .navbar-brand,
 .navbar-inverse .navbar-nav > li > a {
+    color: red;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
 }
 .navbar-static-top,
